Changes for more precise estimation of pure GEM IPM2 calculation time (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@106 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/node-gem/platform/win32bcc/Makefile
+++ b/node-gem/platform/win32bcc/Makefile
@@ -20,14 +20,14 @@ CFLAGS	=	-tWR -x -xd -xp -VM -RT -w -w-hid -tWM -v -tWC -RT-  -DUNICODE -DIPMGEM
 CXXFLAGS=	-tWR -x -xd -xp -VM -RT -w -w-hid -tWM -v -tWC -RT-  -DUNICODE -DIPMGEMPLUGIN -D__win32_borland
 LEXFLAGS=
 YACCFLAGS=-d
-INCPATH	=	 -I"." -I"." -I"." -I"." -I"." -I"." -I"." -I"." -I"C:\Qt\3.3.8\mkspecs\win32-borland"
+INCPATH	=	 -I"." -I"." -I"." -I"." -I"." -I"." -I"." -I"." 
 LINK	=	ilink32
 LFLAGS	=	-L$(BCB)\lib -c -x -Gn -v -ap -Tpe c0x32.obj
 LIBS	=	import32.lib cw32mti.lib
-MOC	=	$(QTDIR)\bin\moc.exe
-UIC	=	$(QTDIR)\bin\uic.exe
+MOC	=	
+UIC	=	
 QMAKE =       qmake
-IDC		=	$(QTDIR)\bin\idc.exe
+IDC		=	
 IDL		=	midl
 ZIP	=	zip -r -9
 DEF_FILE =	
@@ -135,22 +135,11 @@ $(TARGET):  $(UICDECLS) $(OBJECTS) $(OBJMOC)
 |
 
 
-mocables: $(SRCMOC)
-uicables: $(UICIMPLS) $(UICDECLS)
-
-Makefile: gem_node-sep.pro  C:\Qt\3.3.8\mkspecs\win32-borland\qmake.conf 
-	$(QMAKE) -o Makefile gem_node-sep.pro
-qmake: 
-	@$(QMAKE) -o Makefile gem_node-sep.pro
-
 dist:
-	$(ZIP) gemnode.zip $(SOURCES) $(HEADERS) $(DIST) $(FORMS) D:/standalone/node-gem/gem_node-sep.pro  
+	$(ZIP) gemnode.zip $(SOURCES) $(HEADERS) $(DIST) $(FORMS) 
 
-uiclean:
-	@cd .
-mocclean:
-	@cd .
-clean: uiclean mocclean
+
+clean: 
 	-$(DEL_FILE) obj\gstring.obj
 	-$(DEL_FILE) obj\gdatastream.obj
 	-$(DEL_FILE) obj\s_fgl.obj
