Adding Linux-intel to Platforms for node-gem (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@112 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -196,6 +196,7 @@ node-gem/num_methods.h -text
 node-gem/obj/Readme.txt -text
 node-gem/platform/CRAYXT3-catamount/Makefile -text
 node-gem/platform/Linux-GNU/Makefile -text
+node-gem/platform/Linux-Intel/Makefile -text
 node-gem/platform/Linux-PGI/Makefile -text
 node-gem/platform/Linux-PGI/Makefile.prof -text
 node-gem/platform/other/Makefile -text
