Added new example for batch GEM calculations to GEMIPM2K subdir (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@113 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,10 @@
 * text=auto !eol
+GEMIPM2K/.cproject -text
+GEMIPM2K/.project -text
+GEMIPM2K/Makefile -text
+GEMIPM2K/array.h -text
+GEMIPM2K/databr.h -text
+GEMIPM2K/datach.h -text
 GEMIPM2K/doc/html/gemipm2k-inp.html -text
 GEMIPM2K/doc/html/gemipm2k-man.html -text
 GEMIPM2K/doc/html/gems1.png -text
@@ -12,6 +18,53 @@ GEMIPM2K/doc/txt/f_gem_node.h -text
 GEMIPM2K/doc/txt/f_gem_node.inc -text
 GEMIPM2K/doc/txt/filelist-doc.txt -text
 GEMIPM2K/doc/txt/ipm-dat-doc.txt -text
+GEMIPM2K/gdatastream.cpp -text
+GEMIPM2K/gdatastream.h -text
+GEMIPM2K/gstring.cpp -text
+GEMIPM2K/gstring.h -text
+GEMIPM2K/io_arrays.cpp -text
+GEMIPM2K/io_arrays.h -text
+GEMIPM2K/ipm_chemical.cpp -text
+GEMIPM2K/ipm_chemical2.cpp -text
+GEMIPM2K/ipm_chemical3.cpp -text
+GEMIPM2K/ipm_main.cpp -text
+GEMIPM2K/ipm_simplex.cpp -text
+GEMIPM2K/jama_cholesky.h -text
+GEMIPM2K/jama_lu.h -text
+GEMIPM2K/linux-run.bat -text
+GEMIPM2K/m_const.h -text
+GEMIPM2K/m_param.h -text
+GEMIPM2K/main.cpp -text
+GEMIPM2K/ms_multi.cpp -text
+GEMIPM2K/ms_multi.h -text
+GEMIPM2K/ms_multi_file.cpp -text
+GEMIPM2K/ms_multi_format.cpp -text
+GEMIPM2K/ms_param.cpp -text
+GEMIPM2K/node.cpp -text
+GEMIPM2K/node.h -text
+GEMIPM2K/node_format.cpp -text
+GEMIPM2K/num_methods.cpp -text
+GEMIPM2K/num_methods.h -text
+GEMIPM2K/platform/CRAYXT3-catamount/Makefile -text
+GEMIPM2K/platform/Linux-GNU/Makefile -text
+GEMIPM2K/platform/Linux-PGI/Makefile -text
+GEMIPM2K/platform/Linux-PGI/Makefile.prof -text
+GEMIPM2K/platform/other/Makefile -text
+GEMIPM2K/platform/win32bcc/Makefile -text
+GEMIPM2K/s_fgl.cpp -text
+GEMIPM2K/s_fgl.h -text
+GEMIPM2K/s_fgl2.cpp -text
+GEMIPM2K/test/CalcColumn-dat.lst -text
+GEMIPM2K/test/calcColumn-dbr-0-0000.dat -text
+GEMIPM2K/test/calcColumn-dbr-0-0001.dat -text
+GEMIPM2K/test/calcColumn-dch.dat -text
+GEMIPM2K/test/calcColumn-ipm.dat -text
+GEMIPM2K/tnt.h -text
+GEMIPM2K/tnt_array1d.h -text
+GEMIPM2K/tnt_array2d.h -text
+GEMIPM2K/tnt_i_refvec.h -text
+GEMIPM2K/v_user.h -text
+GEMIPM2K/verror.h -text
 mcotac-gem/MCOTAC-GEM/MySystem-dat.lst -text
 mcotac-gem/MCOTAC-GEM/MySystem-dbr-0007.dat -text
 mcotac-gem/MCOTAC-GEM/MySystem-dbr-0008.dat -text
