Added /obj subdir to GEMIPM2K project (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@114 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -45,6 +45,7 @@ GEMIPM2K/node.h -text
 GEMIPM2K/node_format.cpp -text
 GEMIPM2K/num_methods.cpp -text
 GEMIPM2K/num_methods.h -text
+GEMIPM2K/obj/Readme.txt -text
 GEMIPM2K/platform/CRAYXT3-catamount/Makefile -text
 GEMIPM2K/platform/Linux-GNU/Makefile -text
 GEMIPM2K/platform/Linux-PGI/Makefile -text
