Added /platform/win32MinGW makefile to GEMIPM2K and node-gem projects (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@115 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -51,6 +51,7 @@ GEMIPM2K/platform/Linux-GNU/Makefile -text
 GEMIPM2K/platform/Linux-PGI/Makefile -text
 GEMIPM2K/platform/Linux-PGI/Makefile.prof -text
 GEMIPM2K/platform/other/Makefile -text
+GEMIPM2K/platform/win32MinGW/Makefile -text
 GEMIPM2K/platform/win32bcc/Makefile -text
 GEMIPM2K/s_fgl.cpp -text
 GEMIPM2K/s_fgl.h -text
@@ -255,6 +256,7 @@ node-gem/platform/Linux-PGI/Makefile -text
 node-gem/platform/Linux-PGI/Makefile.prof -text
 node-gem/platform/other/Makefile -text
 node-gem/platform/win32bcc/Makefile -text
+node-gem/platform/win32minGW/Makefile -text
 node-gem/platform/win32msvc/Makefile -text
 node-gem/s_fgl.cpp -text
 node-gem/s_fgl.h -text
