--- a/node-gem/platform/win32minGW/Makefile
+++ b/node-gem/platform/win32minGW/Makefile
@@ -18,8 +18,8 @@ CC       = g++
 CXX      = g++
 LEX      = flex
 YACC     = yacc
-CFLAGS   = -g -DIPMGEMPLUGIN 
-CXXFLAGS = -g -DIPMGEMPLUGIN 
+CFLAGS   = -g -O2 -DIPMGEMPLUGIN 
+CXXFLAGS = -g -O2 -DIPMGEMPLUGIN 
 LEXFLAGS = 
 YACCFLAGS= -d
 INCPATH  =  -I.
