--- a/.gitattributes
+++ b/.gitattributes
@@ -57,10 +57,14 @@ GEMIPM2K/s_fgl.cpp -text
 GEMIPM2K/s_fgl.h -text
 GEMIPM2K/s_fgl2.cpp -text
 GEMIPM2K/test/CalcColumn-dat.lst -text
-GEMIPM2K/test/calcColumn-dbr-0-0000.dat -text
-GEMIPM2K/test/calcColumn-dbr-0-0001.dat -text
-GEMIPM2K/test/calcColumn-dch.dat -text
-GEMIPM2K/test/calcColumn-ipm.dat -text
+GEMIPM2K/test/CalcColumn-dbr-0-0000.dat -text
+GEMIPM2K/test/CalcColumn-dbr-0-0000.dat.GEMIPM2K-Dump.out -text
+GEMIPM2K/test/CalcColumn-dbr-0-0000.dat.out -text
+GEMIPM2K/test/CalcColumn-dbr-0-0001.dat -text
+GEMIPM2K/test/CalcColumn-dbr-0-0001.dat.out -text
+GEMIPM2K/test/CalcColumn-dbr.lst -text
+GEMIPM2K/test/CalcColumn-dch.dat -text
+GEMIPM2K/test/CalcColumn-ipm.dat -text
 GEMIPM2K/tnt.h -text
 GEMIPM2K/tnt_array1d.h -text
 GEMIPM2K/tnt_array2d.h -text
