Rearranged and added Makefile.MinGW, updated *.h and *.cpp files, added some test examples (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@119 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 GEMIPM2K/.cproject -text
 GEMIPM2K/.project -text
 GEMIPM2K/Makefile -text
+GEMIPM2K/Makefile.MinGW -text
 GEMIPM2K/array.h -text
 GEMIPM2K/databr.h -text
 GEMIPM2K/datach.h -text
@@ -59,9 +60,12 @@ GEMIPM2K/s_fgl2.cpp -text
 GEMIPM2K/test/CalcColumn-dat.lst -text
 GEMIPM2K/test/CalcColumn-dbr-0-0000.dat -text
 GEMIPM2K/test/CalcColumn-dbr-0-0001.dat -text
+GEMIPM2K/test/CalcColumn-dbr-0-XXXX.dat -text
 GEMIPM2K/test/CalcColumn-dbr.lst -text
 GEMIPM2K/test/CalcColumn-dch.dat -text
 GEMIPM2K/test/CalcColumn-ipm.dat -text
+GEMIPM2K/test/Readme.1st -text
+GEMIPM2K/test/TEST.BAT -text
 GEMIPM2K/tnt.h -text
 GEMIPM2K/tnt_array1d.h -text
 GEMIPM2K/tnt_array2d.h -text
@@ -213,6 +217,7 @@ mcotac-gem/we.dat -text
 mcotac-gem/wegdat1d_.c -text
 mcotac-gem/wf.dat -text
 node-gem/Makefile -text
+node-gem/Makefile.MinGW -text
 node-gem/array.h -text
 node-gem/databr.h -text
 node-gem/datach.h -text
@@ -368,6 +373,7 @@ node-gem/verror.h -text
 nodearray-gem/CalcColumn.BAT -text
 nodearray-gem/LINUX-RUN.BAT -text
 nodearray-gem/Makefile -text
+nodearray-gem/Makefile.MinGW -text
 nodearray-gem/array.h -text
 nodearray-gem/databr.h -text
 nodearray-gem/datach.h -text
