Compiling_in_pgi
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@127 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -80,6 +80,7 @@ mcotac-gem/MCOTAC-GEM/MySystem-ipm.dat -text
 mcotac-gem/MCOTAC-GEM/MySystem.ipm -text
 mcotac-gem/MCOTAC-GEM/MySystem.txt -text
 mcotac-gem/MCOTAC-GEM/caldpl.zip -text
+mcotac-gem/Makefile -text
 mcotac-gem/TEST.INI -text
 mcotac-gem/am0001.dat -text
 mcotac-gem/array.h -text
