Fixed test and added win32-run.bat to standalone GEMIPM2K (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@134 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -72,6 +72,7 @@ GEMIPM2K/tnt_array2d.h -text
 GEMIPM2K/tnt_i_refvec.h -text
 GEMIPM2K/v_user.h -text
 GEMIPM2K/verror.h -text
+GEMIPM2K/win32-run.bat -text
 mcotac-gem/MCOTAC-GEM/MySystem-dat.lst -text
 mcotac-gem/MCOTAC-GEM/MySystem-dbr-0007.dat -text
 mcotac-gem/MCOTAC-GEM/MySystem-dbr-0008.dat -text
