--- a/.gitattributes
+++ b/.gitattributes
@@ -174,6 +174,7 @@ mcotac-gem/p_ibxc.dat -text
 mcotac-gem/p_ibxd.dat -text
 mcotac-gem/p_ibxe.dat -text
 mcotac-gem/p_ibxf.dat -text
+mcotac-gem/platform/GNU/Makefile -text
 mcotac-gem/platform/PGI/Makefile -text
 mcotac-gem/platform/PGI/ipm_main.cpp -text
 mcotac-gem/platform/readme.1st -text
