- Added a wrapper function for the main code in order to link it with c++ - Added makefile for Intel compiler
Tested the version with Gnu and Intel compilers...both compiles, and seem to read the MCOTAC files properly, but the executable dies in the GEMS part, nearly at the same position (independent from compiler) (need to check if the GEMS input files are correct!)

git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@141 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -152,6 +152,7 @@ mcotac-gem/m_const.h -text
 mcotac-gem/m_param.h -text
 mcotac-gem/mainfromf.cpp -text
 mcotac-gem/mco_out.out -text
+mcotac-gem/mcotac.cpp -text
 mcotac-gem/mcotac1d.f -text
 mcotac-gem/mcotac_gems_11_2005.dsp -text
 mcotac-gem/mcotac_gems_11_2005.dsw -text
