--- a/mcotac-gem/Makefile
+++ b/mcotac-gem/Makefile
@@ -1,22 +1,22 @@
-CC = gcc
-CXX = g++
-FORT = gfortran-4.2
-CFLAGS = -c  -g  -pedantic -fno-nonansi-builtins -fbounds-check 
+CC = icc
+CXX = icc
+FORT = ifort
+CFLAGS = -c  -g  
 # -lstd -lC -lpgc -lrt -Msecond_underscore
-CCFLAGS =   -c -g  -DIPMGEMPLUGIN -D__unix -fbounds-check 
-CCFLAGS1 =   -c -g  -DIPMGEMPLUGIN -D__unix -fbounds-check 
-FFLAGS = -c -g -fno-underscoring -fbounds-check 
+CCFLAGS =   -c -g  -DIPMGEMPLUGIN -D__unix 
+CCFLAGS1 =   -c -g  -DIPMGEMPLUGIN -D__unix 
+FFLAGS = -c -g -assume nounderscore -check bounds
 # FFLAGS = -c -g -O2 -fno-underscoring -fbounds-check 
-LINK = gfortran-4.2
-LFLAGS = -lstdc++
+LINK = icc
+LFLAGS = -lstdc++ -L/opt/intel/fce/10.1.015/lib/ -lifcore 
 EXEC = mcotacgem
 
-${EXEC}: mcotac1d.o datio.o erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o \
+${EXEC}: mcotac.o mcotac1d.o datio.o erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o \
        gstring.o gdatastream.o s_fgl.o s_fgl2.o node.o node_format.o ms_multi_file.o \
        ms_multi_format.o ipm_chemical.o ipm_chemical2.o ipm_chemical3.o \
        ipm_main.o ipm_simplex.o io_arrays.o f_gem_node.o ms_param.o num_methods.o
        
-	${LINK} -o ${EXEC}  ${LFLAGS} mcotac1d.o datio.o \
+	${LINK} -o ${EXEC}  ${LFLAGS} mcotac.o mcotac1d.o datio.o \
                  erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o \
        gstring.o gdatastream.o s_fgl.o s_fgl2.o node.o node_format.o ms_multi_file.o \
        ms_multi_format.o ipm_chemical.o ipm_chemical2.o ipm_chemical3.o \
@@ -46,6 +46,8 @@ wegdat1d_.o: wegdat1d_.c gwheader.h
 hydro1d_.o: hydro1d_.c  gwheader.h
 	$(CC)  $(CFLAGS)  hydro1d_.c
 
+mcotac.o: mcotac.cpp 
+	$(CXX)  $(CCFLAGS) mcotac.cpp
 gstring.o: gstring.cpp gstring.h \
 		array.h
 	$(CXX)  $(CCFLAGS) gstring.cpp
