resolved (hopefully) the problems with the GNU compiler This version compiles with GCC/GFORTRAN V4.3 (earlier version contain a bug that prevent %val() to work with double variables
Now Intel and GCC crash at the same position in run_gems while unpacking
the data bridge.....tests are ongoing


git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@142 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -176,6 +176,7 @@ mcotac-gem/p_ibxd.dat -text
 mcotac-gem/p_ibxe.dat -text
 mcotac-gem/p_ibxf.dat -text
 mcotac-gem/platform/GNU/Makefile -text
+mcotac-gem/platform/INTEL/Makefile -text
 mcotac-gem/platform/PGI/Makefile -text
 mcotac-gem/platform/PGI/ipm_main.cpp -text
 mcotac-gem/platform/readme.1st -text
