removed the gemipm2k files from the directory ...as it is much easier to link the files from GEMIPM2K as a library....GNU makefiles (library -> goes to GEMIPM2K) for this style are in platform/GNU
Changed the wrapper function 

git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@143 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -83,7 +83,6 @@ mcotac-gem/MCOTAC-GEM/caldpl.zip -text
 mcotac-gem/Makefile -text
 mcotac-gem/TEST.INI -text
 mcotac-gem/am0001.dat -text
-mcotac-gem/array.h -text
 mcotac-gem/c_2daa.dat -text
 mcotac-gem/c_2dab.dat -text
 mcotac-gem/c_2dac.dat -text
@@ -107,8 +106,6 @@ mcotac-gem/concc.dat -text
 mcotac-gem/concd.dat -text
 mcotac-gem/conce.dat -text
 mcotac-gem/concf.dat -text
-mcotac-gem/databr.h -text
-mcotac-gem/datach.h -text
 mcotac-gem/datio.f -text
 mcotac-gem/debug/TEST.INI -text
 mcotac-gem/debug/initial.out -text
@@ -123,10 +120,6 @@ mcotac-gem/fort.12 -text
 mcotac-gem/fort.13 -text
 mcotac-gem/fort.14 -text
 mcotac-gem/fort.35 -text
-mcotac-gem/gdatastream.cpp -text
-mcotac-gem/gdatastream.h -text
-mcotac-gem/gstring.cpp -text
-mcotac-gem/gstring.h -text
 mcotac-gem/gwheader.h -text
 mcotac-gem/gwheader.inc -text
 mcotac-gem/h00001.dat -text
@@ -136,21 +129,9 @@ mcotac-gem/inistat2.f -text
 mcotac-gem/initial.out -text
 mcotac-gem/inparf.f -text
 mcotac-gem/input_1.dat -text
-mcotac-gem/io_arrays.cpp -text
-mcotac-gem/io_arrays.h -text
-mcotac-gem/ipm_chemical.cpp -text
-mcotac-gem/ipm_chemical2.cpp -text
-mcotac-gem/ipm_chemical3.cpp -text
-mcotac-gem/ipm_main.cpp -text
-mcotac-gem/ipm_simplex.cpp -text
 mcotac-gem/ir0001.dat -text
 mcotac-gem/iter_array.grd -text
-mcotac-gem/jama_cholesky.h -text
-mcotac-gem/jama_lu.h -text
 mcotac-gem/kinetics.inc -text
-mcotac-gem/m_const.h -text
-mcotac-gem/m_param.h -text
-mcotac-gem/mainfromf.cpp -text
 mcotac-gem/mco_out.out -text
 mcotac-gem/mcotac.cpp -text
 mcotac-gem/mcotac1d.f -text
@@ -161,14 +142,6 @@ mcotac-gem/mcotac_gems_11_2005.opt -text
 mcotac-gem/mcotac_gems_11_2005.plg -text
 mcotac-gem/mkmco1dpgn -text
 mcotac-gem/ms_multi.h -text
-mcotac-gem/ms_multi_file.cpp -text
-mcotac-gem/ms_multi_format.cpp -text
-mcotac-gem/ms_param.cpp -text
-mcotac-gem/node.cpp -text
-mcotac-gem/node.h -text
-mcotac-gem/node_format.cpp -text
-mcotac-gem/num_methods.cpp -text
-mcotac-gem/num_methods.h -text
 mcotac-gem/p_ibxa.dat -text
 mcotac-gem/p_ibxb.dat -text
 mcotac-gem/p_ibxc.dat -text
@@ -176,6 +149,7 @@ mcotac-gem/p_ibxd.dat -text
 mcotac-gem/p_ibxe.dat -text
 mcotac-gem/p_ibxf.dat -text
 mcotac-gem/platform/GNU/Makefile -text
+mcotac-gem/platform/GNU/Makefile.lib -text
 mcotac-gem/platform/INTEL/Makefile -text
 mcotac-gem/platform/PGI/Makefile -text
 mcotac-gem/platform/PGI/ipm_main.cpp -text
@@ -189,27 +163,17 @@ mcotac-gem/rc.dat -text
 mcotac-gem/rd.dat -text
 mcotac-gem/re.dat -text
 mcotac-gem/rf.dat -text
-mcotac-gem/s_fgl.cpp -text
-mcotac-gem/s_fgl.h -text
-mcotac-gem/s_fgl2.cpp -text
-mcotac-gem/setpar.cpp -text
 mcotac-gem/setpar_.c -text
 mcotac-gem/solids.dat -text
 mcotac-gem/ss0001.dat -text
 mcotac-gem/test.mak -text
 mcotac-gem/test11.itm -text
 mcotac-gem/testpg.mak -text
-mcotac-gem/tnt.h -text
-mcotac-gem/tnt_array1d.h -text
-mcotac-gem/tnt_array2d.h -text
-mcotac-gem/tnt_i_refvec.h -text
-mcotac-gem/v_user.h -text
 mcotac-gem/va.dat -text
 mcotac-gem/vb.dat -text
 mcotac-gem/vc.dat -text
 mcotac-gem/vd.dat -text
 mcotac-gem/ve.dat -text
-mcotac-gem/verror.h -text
 mcotac-gem/vf.dat -text
 mcotac-gem/wa.dat -text
 mcotac-gem/walk2_.c -text
