--- a/mcotac-gem/platform/GNU/Makefile
+++ b/mcotac-gem/platform/GNU/Makefile
@@ -1,25 +1,22 @@
 CC = gcc-4.3
 CXX = gcc-4.3
 FORT = gfortran-4.3
-CFLAGS = -c  -g -O2 -pedantic -fno-nonansi-builtins -D__unix 
+CFLAGS = -c  -g -O2 -DIPMGEMPLUGIN -pedantic -fno-nonansi-builtins -D__unix 
 # -lstd -lC -lpgc -lrt -Msecond_underscore
 CCFLAGS =   -c -g -O2 -DIPMGEMPLUGIN -D__unix
 CCFLAGS1 =   -c -g -O2 -DIPMGEMPLUGIN -D__unix
-FFLAGS = -c -g -O2 -fbounds-check -fno-underscoring -D__unix -D__GNU
+FFLAGS = -c -g -O2 -fbounds-check -fno-underscoring -DIPMGEMPLUGIN -D__unix -D__GNU
 LINK = gcc-4.3
 LFLAGS = -lstdc++ -lgfortran
-EXEC = mcotacgem
+GEMINCLUDE = /home/kosakowski/SOFT/GEMS/trunk/GEMIPM2K
+GEMLIB     = /home/kosakowski/SOFT/GEMS/trunk/GEMIPM2K
+EXEC = mcotacgem-gnu
 
 ${EXEC}: mcotac.o mcotac1d.o datio.o erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o \
-       gstring.o gdatastream.o s_fgl.o s_fgl2.o node.o node_format.o ms_multi_file.o \
-       ms_multi_format.o ipm_chemical.o ipm_chemical2.o ipm_chemical3.o \
-       ipm_main.o ipm_simplex.o io_arrays.o f_gem_node.o ms_param.o num_methods.o
+       f_gem_node.o
        
 	${LINK} -o ${EXEC}  ${LFLAGS} mcotac.o mcotac1d.o datio.o \
-                 erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o \
-       gstring.o gdatastream.o s_fgl.o s_fgl2.o node.o node_format.o ms_multi_file.o \
-       ms_multi_format.o ipm_chemical.o ipm_chemical2.o ipm_chemical3.o \
-       ipm_main.o ipm_simplex.o io_arrays.o f_gem_node.o ms_param.o num_methods.o
+                 erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o f_gem_node.o -L${GEMLIB} -lgemipm2k
 
 mcotac1d.o: mcotac1d.f gwheader.inc kinetics.inc
 	cp mcotac1d.f mcotac1d.fpp
@@ -47,167 +44,18 @@ hydro1d_.o: hydro1d_.c  gwheader.h
 
 mcotac.o: mcotac.cpp 
 	$(CXX)  $(CCFLAGS) mcotac.cpp
-gstring.o: gstring.cpp gstring.h \
-		array.h
-	$(CXX)  $(CCFLAGS) gstring.cpp
-gdatastream.o: gdatastream.cpp gdatastream.h \
-		verror.h \
-		gstring.h \
-		array.h
-	$(CXX)  $(CCFLAGS) gdatastream.cpp
-s_fgl.o: s_fgl.cpp s_fgl.h \
-		m_const.h \
-		verror.h \
-		v_user.h \
-		gstring.h \
-		array.h
-	$(CXX)  $(CCFLAGS) s_fgl.cpp
-s_fgl2.o: s_fgl2.cpp s_fgl.h \
-		m_const.h \
-		verror.h \
-		v_user.h \
-		gstring.h \
-		array.h
-	$(CXX)  $(CCFLAGS) s_fgl2.cpp
-node.o: node.cpp node.h \
-		gdatastream.h \
-		m_param.h \
-		datach.h \
-		databr.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
-	$(CXX)  $(CCFLAGS) node.cpp
-node_format.o: node_format.cpp io_arrays.h \
-                node.h \
-		gdatastream.h \
-		m_param.h \
-		datach.h \
-		databr.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
-	$(CXX)  $(CCFLAGS) node_format.cpp
-ms_multi_file.o: ms_multi_file.cpp  io_arrays.h \
-                m_param.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
-	$(CXX)  $(CCFLAGS) ms_multi_file.cpp
-ms_multi_format.o: ms_multi_format.cpp  io_arrays.h \
-                m_param.h \
-		node.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h \
-		datach.h \
-		databr.h
-	$(CXX)  $(CCFLAGS) ms_multi_format.cpp
-ipm_chemical.o: ipm_chemical.cpp m_param.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
-	$(CXX)  $(CCFLAGS) ipm_chemical.cpp
-ipm_chemical2.o: ipm_chemical2.cpp m_param.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
-	$(CXX)  $(CCFLAGS) ipm_chemical2.cpp
-ipm_chemical3.o: ipm_chemical3.cpp m_param.h \
-		s_fgl.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
-	$(CXX)  $(CCFLAGS) ipm_chemical3.cpp
-ipm_main.o: ipm_main.cpp m_param.h \
-		jama_lu.h \
-		jama_cholesky.h \
-		node.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h \
-		tnt.h \
-		tnt_array1d.h \
-		tnt_array2d.h \
-		tnt_i_refvec.h \
-		datach.h \
-		databr.h
-	$(CXX)  $(CCFLAGS) -DPGf90 ipm_main.cpp
-ipm_simplex.o: ipm_simplex.cpp m_param.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
-	$(CXX)  $(CCFLAGS) ipm_simplex.cpp
-io_arrays.o: io_arrays.cpp io_arrays.h \
-		verror.h \
-		gstring.h \
-		array.h
-	$(CXX)  $(CCFLAGS1) io_arrays.cpp
-f_gem_node.o: f_gem_node.cpp node.h \
-		m_param.h \
-		datach.h \
-		databr.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
-	$(CXX)  $(CCFLAGS1) f_gem_node.cpp
-ms_param.o: ms_param.cpp m_param.h \
-		num_methods.h \
-		gdatastream.h \
-		node.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h \
-		datach.h \
-		databr.h
-	$(CXX)  $(CCFLAGS) ms_param.cpp
-num_methods.o: num_methods.cpp v_user.h \
-		num_methods.h \
-		verror.h \
-		gstring.h \
-		array.h
-	$(CXX)  $(CCFLAGS) num_methods.cpp
+f_gem_node.o: f_gem_node.cpp ../GEMIPM2K/node.h \
+		../GEMIPM2K/m_param.h \
+		../GEMIPM2K/datach.h \
+		../GEMIPM2K/databr.h \
+		../GEMIPM2K/gdatastream.h \
+		../GEMIPM2K/ms_multi.h \
+		../GEMIPM2K/verror.h \
+		../GEMIPM2K/gstring.h \
+		../GEMIPM2K/array.h \
+		../GEMIPM2K/m_const.h \
+		../GEMIPM2K/v_user.h
+	$(CXX)  $(CCFLAGS1) -I${GEMINCLUDE}  f_gem_node.cpp
 
 #gwheader.h: gwheader.h
 #f_gem_node.h: f_gem_node.h
